objects/CventMyd_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>administratorEmails__c</fullName>
        <label>administratorEmails</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>calculatedQuoteLineFieldNames__c</fullName>
        <label>calculatedQuoteLineFieldNames</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>contractingInForeground__c</fullName>
        <defaultValue>false</defaultValue>
        <label>contractingInForeground</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>contractingMonitorSettingsJson__c</fullName>
        <label>contractingMonitorSettingsJson</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>jsonStringFieldName__c</fullName>
        <label>jsonStringFieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mydTriggersActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>mydTriggersActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>numberFieldNames__c</fullName>
        <label>numberFieldNames</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>opportunityQueryFields__c</fullName>
        <label>opportunityQueryFields</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>preCalculationQuoteLineFieldNames__c</fullName>
        <label>preCalculationQuoteLineFieldNames</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>preOrPost__c</fullName>
        <label>preOrPost</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pre</fullName>
                    <default>true</default>
                    <label>pre</label>
                </value>
                <value>
                    <fullName>post</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qleUrlBeforeQuoteId__c</fullName>
        <label>qleUrlBeforeQuoteId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quoteLineMaxCount__c</fullName>
        <label>quoteLineMaxCount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quoteLineQueryFields__c</fullName>
        <label>quoteLineQueryFields</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>reassignmentSettingsJson__c</fullName>
        <label>reassignmentSettingsJson</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>recalculationSettingsJson__c</fullName>
        <label>recalculationSettingsJson</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>renewalGenerationSettingsJson__c</fullName>
        <label>renewalGenerationSettingsJson</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scheduledJobMax__c</fullName>
        <label>scheduledJobMax</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>secondsBeforeForceReroutingAmendment__c</fullName>
        <label>secondsBeforeForceReroutingAmendment</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>subscriptionFieldNames__c</fullName>
        <label>subscriptionFieldNames</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>validationSettingsJson__c</fullName>
        <label>validationSettingsJson</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>CventMyd_Settings</label>
    <pluralLabel>CventMyd_Settings</pluralLabel>
    <listViews>
        <fullName>preAndPost</fullName>
        <columns>MasterLabel</columns>
        <columns>NamespacePrefix</columns>
        <columns>preOrPost__c</columns>
        <columns>jsonStringFieldName__c</columns>
        <columns>subscriptionFieldNames__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>preOrPost__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>preAndPost</label>
        <language>en_US</language>
    </listViews>
</CustomObject>